Fix for Mod Mode not working and logging you in using your local credentials. GUI now Unix friendly when updating and should now restart after update. New way of downloading plus Checksum testing should help prevent corrupted updates.